# papyrus-vm

./: CMakeLists.txt  README.md
src/papyrus-vm-lib/: ActivePexInstance.cpp  OpcodesImplementation.cpp  OpcodesImplementation.h  Reader.cpp  Reader.h  Structures.h  VMLinker.cpp  VMLinker.h  VarValue.cpp  VirtualMachine.cpp  VirtualMachine.h
src/papyrus-vm-main/: DataVisualization.cpp  DataVisualization.h  main.cpp
test_files/: IntTest.psc  OpcodesTest.psc  RunTest.cmake  StringTest.psc  TestObject.psc  _TestObject.psc
